# bevy-jam-5

./: Cargo.toml
.github/workflows/: ci.yaml  release.yaml
src/: audio.rs  boid.rs  breeding.rs  cursor.rs  duck_boid.rs  food.rs  game_state.rs  leaderboard.rs  life_cycles.rs  main.rs  movement.rs  player.rs  spawning.rs  sprite_animation.rs  threat_boid.rs  ui.rs  vfx.rs
