[package]
name = "ducky_boids"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", features = [ "wav", "mp3" ] }
bevy_jornet = "0.8.0"
bevy_particle_systems = "0.13.0"
rand = "0.8.5"
uuid = "1.10.0"
